# devops-course-project

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  TASKS.TXT  Vagrantfile  main.tf  notes.txt  outputs.tf  pyproject.toml  variables.tf
.github/workflows/: todo_app_ci_pipeline.yml
todo_app/: TODO.txt  app.py  flask_config.py  item.py  mongo_db_client.py  test.py  trello_client.py  user.py  view_model.py  wsgi.py
todo_app/e2e_tests/: test_app_end_to_end.py
todo_app/templates/: createTodoList.html  error.html  index.html  itemForm.html  unauthorised.html
todo_app/tests/: test_view_model.py
todo_app/tests/e2e/: test_app_end_to_end.py
todo_app/tests/integration/: test_app_integration.py
